cmake_minimum_required(VERSION 2.8)
project(CAdvanced C)
set(CMAKE_C_STANDARD 99)
add_subdirectory(DebugPrintf)
add_subdirectory(mylib)
add_subdirectory(libfdr)
include_directories(${CMAKE_SOURCE_DIR})

add_executable(demo_debug_printf demo/environment/demo_debug_printf.c)
target_link_libraries(demo_debug_printf debug_printf)
add_executable(qsort_demo resources/Quick_Sort.c)
target_link_libraries(qsort_demo debug_printf mylib)
add_executable(jval_demo demo/lesson02/jval_demo.c)
target_link_libraries(jval_demo fdr)

add_executable(vector_demo demo/lesson03/vector_demo.c)
target_link_libraries(vector_demo debug_printf)
add_executable(vector_demo2 demo/lesson03/vector_demo2.c)
target_link_libraries(vector_demo2 debug_printf)
add_executable(vector_demo3 demo/lesson03/vector_demo3.c)
target_link_libraries(vector_demo3 debug_printf)